@@ -20,12 +20,16 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: true
-    - uses:  0ad-matters/gh-action-build-pyromod@v1
+    - uses: 0ad-matters/gh-action-build-pyromod@v1
       with:
         name: ${{ env.MOD_NAME }}
         version: ${{ env.MOD_VERSION }}
         directory: 'test/${{ env.MOD_NAME }}'
-    - uses:  0ad-matters/gh-action-build-pyromod@trunk
+    - run: rm -rf /output/*
+    - uses: actions/checkout@v3
+      with:
+        submodules: true
+    - uses: 0ad-matters/gh-action-build-pyromod@trunk
       with:
         name: ${{ env.MOD_NAME }}
         version: ${{ env.MOD_VERSION }}
